--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
     body {
         margin: 0;
         overflow-x: hidden;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family:Courier;
         background-color: #031321;
         color: rgb(255, 255, 255, 0.9);
     }
@@ -31,16 +31,17 @@
         margin-right: auto;
         margin-left: auto;
     }
-    .button {border-radius: 12px;}
+    .button4 {border-radius: 12px;
+        background-color: darkgray;}
     hr{
     border:0;
     margin:0;
     width:100%;
     height:3px;
-    background:white;
-}
+    background:white;}
     
-</style><link rel="icon" type="image/png" href="media/favicon.png"></head>
+</style>
+<link rel="icon" type="image/png" href="media/favicon.png"></head>
 
 
 <body>
@@ -48,42 +49,23 @@
     
 <div class="container">
     <div class="col-md-12">
-        <h1>Revolution has begun!</h1>
-        <p>'I am bound to Tahiti for more men.'
-            'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-            'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades.</p>
-        <p><button class="button button4"><a href="#">Read more</a></button></p>
+        <h1>CYBER KILL CHAIN</h1>
+        <p>'The Cyber kill chain, also known as CKC which is a phase-based cybersecurity model developed by Lockheed Martin in 2011.Similar in concept to the military’s model, it defines the steps used by cyber attackers in today’s cyber-based attacks. The theory is that by understanding each of these stages, defenders can better identify and stop attackers at each of the respective stages.The kill chain helps us understand and combat ransomware, security breaches, and advanced persistent attacks (APTs).</p>
+        <p><button class="button button4 pull-right"><a href="#" style="color: whitesmoke;">Read more</a></button></p>
         <div style="padding-bottom: 10px;">
-            <span class="badge">Posted 2012-08-02 20:47:04</span>
-            <div class="pull-right">
-                <button><span class="label label-default">alice</span> </button>
-                <button><span class="label primary">story</span> </button>
-                <button><span class="label success">blog</span> </button>
-                <button><span class="label info">personal</span> </button>
-                <button><span class="label warning">warning</span> </button>
-                <button style="background-color: #f44336;"><span class="label danger">danger</span> </button>
-            </div>     
+            <span class="badge">Posted 10-11-2021 12:47:04</span>     
         </div>
         <br>
         <hr>
 
-        <h1>Revolution has begun!</h1>
-        <p>'I am bound to Tahiti for more men.'
-            'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-            'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades.</p>
-        <p><button class="button button4"><a href="#">Read more</a></button></p>
+        <h1>RED TEAM &amp; BLUE TEAM</h1>
+        <p>A red team/blue team exercise is a cybersecurity assessment technique that uses simulated attacks to gauge the strength of the organization’s existing security capabilities and identify areas of improvement in a low-risk environment.A red team that uses real-world adversary tradecraft in an attempt to compromise the environment.A blue team that consists of incident responders who work within the security unit to identify, assess and respond to the intrusion.Red team/blue team simulations play an important role in defending the organization against a wide range of cyberattacks from today’s sophisticated adversaries.</p>
+        <p><button class="button button4 pull-right"><a href="#" style="color: whitesmoke;">Read more</a></button></p>
         <div style="padding-bottom: 10px;">
-            <span class="badge">Posted 2012-08-02 20:47:04</span>
-            <div class="pull-right">
-                <button><span class="label label-default">alice</span> </button>
-                <button><span class="label primary">story</span> </button>
-                <button><span class="label success">blog</span> </button>
-                <button><span class="label info">personal</span> </button>
-                <button><span class="label warning">warning</span> </button>
-                <button style="background-color: #f44336;"><span class="label danger">danger</span> </button>
-            </div>     
-            <hr>
+            <span class="badge">Posted 10-11-2021 12:47:04</span>
         </div>
+        <br>
+        <hr>
     </div>
 
 
