--- a/events.html
+++ b/events.html
@@ -255,6 +255,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "active", "", "", ""], "");
+            createNav1(["", "", "", "", ""], "");
             createFooter();
             createEvent();
             createUpcomingEvents();
