--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -74,6 +74,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "", "", "active", ""], "");
+            createNav1(["", "", "", "", ""], "");
             createFooter();
         });
     </script>
