--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "active", "", "", "", ""], "");
-            createNav1(["", "", "", "", ""], "");
+            // createNav1(["", "", "", "", ""], "");
             createFooter();
         });
     </script>
