--- a/events.html
+++ b/events.html
@@ -255,7 +255,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "active", "", "", ""], "");
-            createNav1(["", "", "", "", ""], "");
+            // createNav1(["", "", "", "", ""], "");
             createFooter();
             createEvent();
             createUpcomingEvents();
