--- a/team-tca.html
+++ b/team-tca.html
@@ -336,7 +336,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "", "", "", "active"], "");
-            createNav1(["", "", "", "", ""], "");
+            // createNav1(["", "", "", "", ""], "");
             createFooter();
         });
     </script>
