--- a/achievements.html
+++ b/achievements.html
@@ -49,7 +49,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "", "active", "", ""], "");
-            createNav1(["", "", "", "", ""], "");
+            // createNav1(["", "", "", "", ""], "");
             // createFooter();
         });
     </script>
