--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -74,7 +74,7 @@
     <script>
         $(document).ready(function() {
             createNav(["", "", "", "", "active", ""], "");
-            createNav1(["", "", "", "", ""], "");
+            // createNav1(["", "", "", "", ""], "");
             createFooter();
         });
     </script>
