Updated Tools, Blogs, Fonts & Navbar

--- a/news.html
+++ b/news.html
@@ -45,7 +45,7 @@
     </header>
     <div id="awareness">
     </div>
-
+<h1 class="display-3 text-center pt-5" style="font-family:Courier;font-size: 40px;">News Articles</h1>
     <div class="col-sm|md|lg|xl-auto cool1">
         <div class="card-deck">
             <div style="width: 18rem; padding:10px">
@@ -112,6 +112,7 @@
             createNav(["", "", "", "active", "", ""], "");
             createSubNav(["active", "", "", "", ""], "");
             // createFooter();
+            $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
 
