--- a/security-practices.html
+++ b/security-practices.html
@@ -70,7 +70,7 @@
 
 
 
-    <h1 class="display-3 text-center pt-5" style="font-family:Courier;">Security Practices</h1>
+    <h1 class="display-3 text-center pt-5" style="font-family:Courier;font-size: 40px;">Security Practices</h1>
 
     <div class="container justify-content-md-center">
         <br>
@@ -231,6 +231,7 @@
             createNav(["", "", "", "", "", ""], "");
             createSubNav(["", "", "", "active", ""], "");
             // createFooter();
+            $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
 
