--- a/tools.html
+++ b/tools.html
@@ -65,6 +65,7 @@
     <!-- <br> -->
 
     <section class="blog-list px-3 py-5 p-md-5">
+        <h1 class="display-3 text-center" style="font-family:Courier;font-size: 40px;">Useful Tools</h1>
         <div class="container" id="tools">
         </div>
 
@@ -80,6 +81,7 @@
             createSubNav(["", "", "active", "", ""], "");
             createTools();
             // createFooter();
+            $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
 
