--- a/blog.html
+++ b/blog.html
@@ -39,13 +39,19 @@
             border-radius: 12px;
             background-color: darkgray;
         }
-        
-        hr {
+        /* hr {
             border: 0;
             margin: 0;
             width: 100%;
             height: 3px;
             background: white;
+        } */
+        
+        .ellipsis {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
         }
     </style>
     <link rel="icon" type="image/png" href="media/favicon.png">
@@ -57,8 +63,15 @@
     <div id="awareness">
     </div>
 
+    <section class="blog-list px-3 py-5 p-md-5">
+        <h1 class="display-3 text-center" style="font-family:Courier;font-size: 40px;">Blogs</h1>
+        <div class="container" id="blogs">
+        </div>
 
-    <div class="container">
+    </section>
+
+    <!-- <div class="container">
+        <h1 class="display-3 text-center pt-5" style="font-family:Courier;font-size: 40px;">Blogs</h1>
         <div class="col-md-12">
             <h1>CYBER KILL CHAIN</h1>
             <p>'The Cyber kill chain, also known as CKC which is a phase-based cybersecurity model developed by Lockheed Martin in 2011.Similar in concept to the military’s model, it defines the steps used by cyber attackers in today’s cyber-based attacks.
@@ -81,20 +94,22 @@
             </div>
             <br>
             <hr>
-        </div>
+        </div> -->
 
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-        <script src="js/script.js"></script>
-        <script>
-            $(document).ready(function() {
-                createNav(["", "", "", "active", "", ""], "");
-                createSubNav(["", "active", "", "", ""], "");
-                // createFooter();
-            });
-        </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+    <script>
+        $(document).ready(function() {
+            createNav(["", "", "", "active", "", ""], "");
+            createSubNav(["", "active", "", "", ""], "");
+            createBlogs();
+
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 
 
 </body>
